--- a/project-01/src/sass/main.scss
+++ b/project-01/src/sass/main.scss
@@ -15,8 +15,8 @@
 @import 'components/navigation';
 @import 'components/logo';
 @import 'components/menu-navigation';
-@import 'components/section-training';
-@import 'components/section-icons';
+@import 'components/header-training';
+@import 'components/header-icons';
 @import 'components/section-program';
 @import 'components/menu-icons';
 @import 'components/section-problem';
