--- a/project-01/src/sass/components/header.scss
+++ b/project-01/src/sass/components/header.scss
@@ -51,7 +51,29 @@
     margin-bottom: 62px;
     padding: 34px 0px 0px;
   }
-  
+
+  .header__section-training {
+    margin-bottom: 116px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .header__wrapper {
+    // height: 640px;
+    // min-height: 945px;
+    background-image: url('../../images/bgr-tablet.png');
+    background-repeat: no-repeat;
+    // background-position: 0px 10px;
+    background-size: contain;
+    margin-bottom: 54px;
+    padding: 0px 40px;
+  }
+
+  .header__navigation {
+    margin-bottom: 62px;
+    padding: 34px 0px 0px;
+  }
+
   .header__section-training {
     margin-bottom: 116px;
   }
