--- a/project-01/src/sass/helpers/placeholders.scss
+++ b/project-01/src/sass/helpers/placeholders.scss
@@ -18,7 +18,7 @@
   // display: inline-block;
   margin: 0px;
   text-decoration: none;
-  transition: all 0.2s linear;
+  // transition: all 0.2s linear;
 }
 
 %item {
