--- a/project-01/src/sass/components/button.scss
+++ b/project-01/src/sass/components/button.scss
@@ -1,4 +1,5 @@
 .button {
+  // max-width: 250px;
   width: 250px;
   font-size: 11px;
   line-height: $main-text-height;
@@ -17,14 +18,14 @@
   }
 
   &--lighter {
-    color: #d35526;
+    color: #ff6b08;
     background-color: $primary-white-color;
-    border: 2px solid #d35526;
-    
+    border: 2px solid #ff6b08;
+
     &:hover,
     &:focus {
       color: $primary-white-color;
-      background-color: #d35526;
+      background-color: #ff6b08;
       border: 2px solid #ffffff;
     }
   }
@@ -33,7 +34,12 @@
 @media screen and (min-width: 1280px) {
   .button {
     width: 300px;
-    padding: 26px 14px;
+    font-size: 12px;
+    padding: 25px 5px;
+
+    &--light {
+      letter-spacing: 2px;
+    }
   }
 }
 
