--- a/project-01/src/sass/components/section-action.scss
+++ b/project-01/src/sass/components/section-action.scss
@@ -24,8 +24,22 @@
 
   .section-action__title {
     font-size: 26px;
-    color: rgb(24, 25, 29);
     line-height: 1.269;
     margin: 0px 0px 34px 0px;
   }
 }
+
+@media screen and (min-width: 1280px) {
+  .section-action__wrapper {
+    padding: 0px 35px 0px;
+    margin-bottom: 50px;
+  }
+
+  .section-action__title {
+    font-size: 42px;
+    line-height: 1.489;
+    text-align: left;
+    margin: 0px 0px 32px 0px;
+  }
+}
+
