--- a/project-01/src/sass/components/section-choosing.scss
+++ b/project-01/src/sass/components/section-choosing.scss
@@ -36,10 +36,22 @@
 
   .section-choosing__title {
     font-size: 26px;
-    // line-height: 2.405;
     text-align: center;
     margin-bottom: 22px;
     white-space: initial;
   }
+}
 
+@media screen and (min-width: 1280px) {
+  .section-choosing__wrapper {
+    height: auto;
+    padding: 0px 35px;
+  }
+
+  .section-choosing__title {
+    font-size: 42px;
+    line-height: 1.346;
+    margin-bottom: 30px;
+    z-index: 2;
+  }
 }
