--- a/project-01/src/sass/main.scss
+++ b/project-01/src/sass/main.scss
@@ -34,7 +34,7 @@
 @import 'components/graduate-card';
 @import 'components/cards-slides';
 @import 'components/section-form';
-@import 'components/input-field';
+@import 'components/form-registration';
 @import 'components/footer';
 @import 'components/footer-form';
 @import 'components/copyright';
