--- a/project-01/src/sass/components/form-registration.scss
+++ b/project-01/src/sass/components/form-registration.scss
@@ -41,10 +41,16 @@
     font-size: 21px;
     line-height: 1.8;
     padding: 16px 5px 16px 26px;
-  
+
     &::-webkit-input-placeholder {
       font-size: 21px;
       line-height: 1.8;
     }
+  }
+}
+
+@media screen and (min-width: 1680px) {
+  .input-field {
+    padding: 17px 5px 17px 26px;
   }
 }
