--- a/project-01/src/sass/components/header.scss
+++ b/project-01/src/sass/components/header.scss
@@ -18,12 +18,11 @@
   background-repeat: no-repeat;
   background-size: contain;
   margin-bottom: 50px;
-  padding: 0px 20px;
+  padding: 26px 20px 0px;
 }
 
 .header__navigation {
   margin-bottom: 52px;
-  padding: 26px 0px 0px;
 }
 
 .header__section-training {
@@ -39,12 +38,11 @@
   .header__wrapper {
     background-image: url('../../images/bgr-tablet.png');
     margin-bottom: 54px;
-    padding: 0px 40px;
+    padding: 34px 40px 0px;
   }
 
   .header__navigation {
     margin-bottom: 62px;
-    padding: 34px 0px 0px;
   }
 
   .header__section-training {
@@ -65,5 +63,22 @@
 
   .header__section-training {
     margin-bottom: 128px;
+  }
+}
+
+@media screen and (min-width: 1680px) {
+  .header__wrapper {
+    background-image: url('../../images/bgr-desk-larg.png');
+    padding: 28px 48px 0px 186px;
+    margin-bottom: 126px;
+  }
+
+  .header__navigation {
+    padding: 0px 106px 0px 0px;
+    margin-bottom: 48px;
+  }
+
+  .header__section-training {
+    margin-bottom: 108px;
   }
 }
