--- a/project-01/src/sass/components/menu-problem.scss
+++ b/project-01/src/sass/components/menu-problem.scss
@@ -36,6 +36,7 @@
   margin: 0px;
   position: relative;
   white-space: pre-line;
+  letter-spacing: 0.5px;
 
   &::before {
     display: block;
@@ -57,7 +58,7 @@
   }
 
   .menu-problem__item {
-    max-width: 212px;
+    max-width: 216px;
   }
 
   .menu-problem__item:not(:nth-last-of-type(-3n+1)) {
@@ -70,14 +71,17 @@
 
   .menu-problem__text {
     white-space: initial;
-    // white-space: pre;
-  }
+    letter-spacing: normal;
 
+    &--position{
+      padding-right: 60px;
+    }
+  }
 }
 
 @media screen and (min-width: 1280px) {
   .menu-problem {
-    padding: 50px 100px 0px;
+    padding: 54px 100px 0px;
   }
 
   .menu-problem__item {
@@ -86,7 +90,7 @@
   }
 
   .menu-problem__item:not(:nth-last-of-type(-2n+1)) {
-    margin-bottom: 34px;
+    margin-bottom: 38px;
   }
 
   .menu-problem__item:nth-last-of-type(-n+3) {
